--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-s0cale=1.0">
     <title>Bienvenida a la Comunidad</title>
 <style>
-    /* --- ESTILOS GENERALES Y AJUSTABLES/* Contenedor del campo de teléfono */ --- */
+    /* --- ESTILOS GENERALES Y AJUSTABLES --- */
     html, body {
         min-height: 100%;
     }
@@ -185,56 +185,9 @@
         transition: background-color 0.3s;
     }
 
-.whatsapp-button:hover {
-        background-color: #128C7E;
-    }
-
-/* *** ESTILOS CLAVE AÑADIDOS/MODIFICADOS PARA EL INPUT DE TELÉFONO *** */
-/* Contenedor del campo de teléfono */
-.phone-input-container {
-    display: flex; /* Hacemos que los elementos internos se pongan en línea */
-    align-items: center;
-    position: relative;
-    width: 100%;
-    margin-bottom: 30px;
-    padding: 0; 
-    border: none;
-    background: none;
-}
-
-/* Estilo para el input del prefijo */
-.prefix-input {
-    width: 30%; /* Espacio para el prefijo y la bandera */
-    height: 54px;
-    line-height: 54px;
-    margin-right: 5px;
-    text-align: center;
-    font-weight: bold;
-    color: black;
-    /* Estilos del campo normal */
-    padding: 10px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid black;
-    background-color: white;
-    font-size: 19px;
-    font-family: Arial, sans-serif;
-    margin-bottom: 0 !important; /* Quita el margen inferior general */
-}
-
-/* Estilo para el input del número de teléfono */
-.form-group input[type="tel"] {
-    width: 70%; /* Espacio restante para el número */
-    padding-left: 10px;
-    margin-bottom: 0 !important; /* Quita el margen inferior general */
-    /* Aseguramos que herede el estilo general de input */
-    border: 1px solid black;
-    background-color: white;
-    border-radius: 5px;
-    height: 54px;
-    line-height: 54px;
-}
-
+    .whatsapp-button:hover {
+        background-color: #128C7E;
+    }
 </style>
 </head>
 <body>
@@ -282,33 +235,30 @@
             </div>
 
 <div class="form-group">
-<label for="pais">2️⃣ ¿De qué país nos visitas?<span class="required-asterisk">*</span></label>
-<select id="pais" name="pais" required>
-    <option value="" disabled selected hidden>Selecciona un país</option>
-    <option value="Colombia" data-prefijo="+57" data-bandera="🇨🇴">🇨🇴 Colombia</option>
-    <option value="México" data-prefijo="+52" data-bandera="🇲🇽">🇲🇽 México</option>
-    <option value="Perú" data-prefijo="+51" data-bandera="🇵🇪">🇵🇪 Perú</option>
-    <option value="Ecuador" data-prefijo="+593" data-bandera="🇪🇨">🇪🇨 Ecuador</option>
-    <option value="Chile" data-prefijo="+56" data-bandera="🇨🇱">🇨🇱 Chile</option>
-    <option value="Bolivia" data-prefijo="+591" data-bandera="🇧🇴">🇧🇴 Bolivia</option>
-    <option value="Guatemala" data-prefijo="+502" data-bandera="🇬🇹">🇬🇹 Guatemala</option>
-    <option value="El Salvador" data-prefijo="+503" data-bandera="🇸🇻">🇸🇻 El Salvador</option>
-    <option value="Argentina" data-prefijo="+54" data-bandera="🇦🇷">🇦🇷 Argentina</option>
-    <option value="Venezuela" data-prefijo="+58" data-bandera="🇻🇪">🇻🇪 Venezuela</option>
-    <option value="Honduras" data-prefijo="+504" data-bandera="🇭🇳">🇭🇳 Honduras</option>
-    <option value="Uruguay" data-prefijo="+598" data-bandera="🇺🇾">🇺🇾 Uruguay</option>
-    <option value="Costa Rica" data-prefijo="+506" data-bandera="🇨🇷">🇨🇷 Costa Rica</option>
-    <option value="Otro País" data-prefijo="" data-bandera="🌎">🌎 Otro País</option>
-</select>
+    <label for="pais">2️⃣ ¿De qué país nos visitas? 🇵🇪 🇨🇴 🇪🇨 🇲🇽 🇨🇱 🇧🇴 🇬🇹<span class="required-asterisk">*</span></label>
+    <select id="pais" name="pais" required>
+        <option value="" disabled selected hidden>Selecciona tu País</option>
+        <option value="Colombia" data-prefijo="+57">🇨🇴 Colombia (+57)</option>
+        <option value="Mexico" data-prefijo="+52">🇲🇽 México (+52)</option>
+        <option value="Peru" data-prefijo="+51">🇵🇪 Perú (+51)</option>
+        <option value="Ecuador" data-prefijo="+593">🇪🇨 Ecuador (+593)</option>
+        <option value="Chile" data-prefijo="+56">🇨🇱 Chile (+56)</option>
+        <option value="Bolivia" data-prefijo="+591">🇧🇴 Bolivia (+591)</option>
+        <option value="Guatemala" data-prefijo="+502">🇬🇹 Guatemala (+502)</option>
+        <option value="El-Salvador" data-prefijo="+503">🇸🇻 El Salvador (+503)</option>
+        <option value="Argentina" data-prefijo="+54">🇦🇷 Argentina (+54)</option>
+        <option value="Venezuela" data-prefijo="+58">🇻🇪 Venezuela (+58)</option>
+        <option value="Honduras" data-prefijo="+504">🇭🇳 Honduras (+504)</option>
+        <option value="Uruguay" data-prefijo="+598">🇺🇾 Uruguay (+598)</option>
+        <option value="Costa-Rica" data-prefijo="+506">🇨🇷 Costa Rica (+506)</option>
+        <option value="Otro-pais" data-prefijo="--">🌎 Otro país</option>
+    </select>
+</div>
 
-<div class="form-group">
-<label for="telefono">3️⃣ Tu Teléfono<span class="required-asterisk">*</span></label>
-                <div class="phone-input-container">
-                    <input type="text" id="prefijo" name="prefijo" class="prefix-input" value="" readonly tabindex="-1">
-                    <input type="tel" id="telefono" name="telefono" placeholder="Número de Teléfono" required pattern="[0-9]*" inputmode="numeric" maxlength="15">
-                    <input type="hidden" id="telefono_completo" name="telefono_completo">
-                </div>
-            </div>
+            <div class="form-group">
+                <label for="telefono">3️⃣ Tu Teléfono<span class="required-asterisk">*</span></label>
+                <input type="tel" id="telefono" name="telefono" placeholder="Tu respuesta" required>
+            </div>
 
             <div class="form-group">
                 <label for="asesor">4️⃣ Ya sabes que Alberto Salinas es tu Asesor? 😎<span class="required-asterisk">*</span></label>
@@ -403,122 +353,33 @@
 </div>
 
 <script>
-    // *** LÓGICA DE VALIDACIÓN Y FORMATO DE TELÉFONO ***
+    document.addEventListener('DOMContentLoaded', function() {
+        const formulario = document.getElementById('miFormulario');
+        const mainContainer = document.getElementById('main-container');
+        const mensajeExito = document.getElementById('mensaje-exito');
 
-// 1. Objeto que define el formato (mínimo/máximo de dígitos) por país.
-    const formatos = {
-        'Perú': { min: 9, max: 9, placeholder: 'Ej: 987654321 (9 dígitos)' },
-        'Colombia': { min: 10, max: 10, placeholder: 'Ej: 3001234567 (10 dígitos)' },
-        'Ecuador': { min: 9, max: 9, placeholder: 'Ej: 987654321 (9 dígitos)' },
-        'México': { min: 10, max: 10, placeholder: 'Ej: 5512345678 (10 dígitos)' },
-        'Chile': { min: 9, max: 9, placeholder: 'Ej: 987654321 (9 dígitos)' },
-        'Bolivia': { min: 8, max: 8, placeholder: 'Ej: 71234567 (8 dígitos)' },
-        'Guatemala': { min: 8, max: 8, placeholder: 'Ej: 51234567 (8 dígitos)' },
-        'El Salvador': { min: 8, max: 8, placeholder: 'Ej: 71234567 (8 dígitos)' },
-        'Argentina': { min: 10, max: 10, placeholder: 'Ej: 1112345678 (10 dígitos)' },
-        'Venezuela': { min: 10, max: 10, placeholder: 'Ej: 4141234567 (10 dígitos)' },
-        'Honduras': { min: 8, max: 8, placeholder: 'Ej: 91234567 (8 dígitos)' },
-        'Uruguay': { min: 8, max: 8, placeholder: 'Ej: 98765432 (8 dígitos)' },
-        'Costa Rica': { min: 8, max: 8, placeholder: 'Ej: 81234567 (8 dígitos)' },
-        'Otro País': { min: 6, max: 15, placeholder: 'Ingresa tu número (sin código de área)' }
-    };
+        formulario.addEventListener('submit', function(event) {
+            // Detiene el envío normal del formulario
+            event.preventDefault();
 
+            // Oculta todo el contenido principal y muestra la imagen de agradecimiento
+            mainContainer.style.display = 'none';
+            mensajeExito.style.display = 'block';
 
-    // Asegurar que la función se ejecute al cargar para inicializar el campo si hay un país por defecto (Aunque el select tiene "disabled selected hidden")
-    // Se añade un pequeño retardo para asegurar que el DOM se haya cargado completamente
+            // Desplaza la página al inicio de forma suave
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
 
- // 2. Función para actualizar el campo de teléfono basado en el país
-    function updatePhoneInput() {
-        const paisSelect = document.getElementById('pais');
-        const prefijoInput = document.getElementById('prefijo');
-        const telefonoInput = document.getElementById('telefono');
-        
-        // Debe haber una opción seleccionada
-        const selectedOption = paisSelect.options[paisSelect.selectedIndex];
-        
-        // Verifica si la opción es válida (no es el placeholder)
-        if (selectedOption.value) {
-            const prefijo = selectedOption.getAttribute('data-prefijo');
-            const bandera = selectedOption.getAttribute('data-bandera');
-            const pais = selectedOption.value;
-            const formato = formatos[pais] || { min: 6, max: 15, placeholder: 'Número de Teléfono' };
+            // Envía los datos a Google Sheets usando la API Fetch
+            const formData = new FormData(formulario);
+            const scriptURL = formulario.getAttribute('action');
 
-            // 1. Actualizar el input de prefijo con bandera y prefijo
-            prefijoInput.value = `${bandera} ${prefijo}`;
-            
-            // 2. Actualizar el placeholder para mostrar el formato esperado (cantidad de caracteres)
-            telefonoInput.placeholder = formato.placeholder;
-            
-        } else {
-            // Si no hay país seleccionado, limpiar el campo de prefijo
-            prefijoInput.value = '';
-            telefonoInput.placeholder = 'Número de Teléfono';
-        }
-    }
-
-
-    // 3. Lógica principal del formulario (AJUSTADA)
-    document.addEventListener('DOMContentLoaded', function() {
-        const formulario = document.getElementById('miFormulario');
-        const mainContainer = document.getElementById('main-container');
-        const mensajeExito = document.getElementById('mensaje-exito');
-        const paisSelect = document.getElementById('pais');
-        const telefonoInput = document.getElementById('telefono');
-        const prefijoInput = document.getElementById('prefijo'); // ¡Añadimos esta variable!
-        const telefonoCompletoInput = document.getElementById('telefono_completo');
-        
-        // Inicializar y escuchar el cambio en el selector de país
-        updatePhoneInput(); 
-        paisSelect.addEventListener('change', updatePhoneInput);
-
-        formulario.addEventListener('submit', function(event) {
-            event.preventDefault(); // Detiene el envío normal del formulario
-
-            // --- VALIDACIONES ---
-            const selectedOption = paisSelect.options[paisSelect.selectedIndex];
-            const pais = selectedOption.value;
-            const formato = formatos[pais] || { min: 6, max: 15 };
-            const telefonoNumero = telefonoInput.value.trim();
-            const prefijo = prefijoInput.value.trim();
-            
-            if (pais === "") {
-                alert('Por favor, selecciona tu país (pregunta 2).');
-                return;
-            }
-
-            if (telefonoNumero.length < formato.min || telefonoNumero.length > formato.max) {
-                alert(`El número de teléfono para ${pais} debe tener entre ${formato.min} y ${formato.max} dígitos.`);
-                return;
-            }
-            // --- FIN VALIDACIONES ---
-
-            // Ensamblar el número de teléfono completo (Prefijo + Número)
-            const telefonoFinal = `${prefijo}${telefonoNumero}`;
-            
-            // Asignar el valor final al campo oculto que se enviará al Google Sheet
-            telefonoCompletoInput.value = telefonoFinal;
-
-            // Oculta todo el contenido principal y muestra la imagen de agradecimiento
-            mainContainer.style.display = 'none';
-            mensajeExito.style.display = 'block';
-
-            // Desplaza la página al inicio de forma suave
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-
-            // Envía los datos a Google Sheets usando la API Fetch
-            const formData = new FormData(formulario);
-            const scriptURL = formulario.getAttribute('action');
-
-            fetch(scriptURL, { method: 'POST', body: formData })
-                .then(response => console.log('Envío exitoso!', response))
-                .catch(error => console.error('Error!', error));
-        });
-        
-    });
-        
+            fetch(scriptURL, { method: 'POST', body: formData })
+                .then(response => console.log('Envío exitoso!', response))
+                .catch(error => console.error('Error!', error));
+        });
     });
 </script>
 
