--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
 
 <div class="form-group">
-    <label for="pais">2️⃣ ¿De qué país nos visitas? <span class="required-asterisk">*</span></label>
+    <label for="pais">2️⃣ ¿De qué país nos visitas? 🇵🇪 🇨🇴 🇪🇨 🇲🇽 🇨🇱 🇧🇴 🇬🇹<span class="required-asterisk">*</span></label>
     <select id="pais" name="pais" required>
         <option value="" disabled selected hidden>Selecciona tu País</option>
         <option value="Colombia" data-prefijo="+57">🇨🇴 Colombia (+57)</option>
