--- a/index.html
+++ b/index.html
@@ -189,23 +189,53 @@
         background-color: #128C7E;
     }
 
-/* *** ESTILOS CLAVE AÑADIDOS PARA EL INPUT DE TELÉFONO *** */
+/* *** ESTILOS CLAVE CORREGIDOS PARA EL INPUT DE TELÉFONO *** */
+
 /* Contenedor del campo de teléfono */
 .phone-input-container {
     display: flex; /* Hacemos que los elementos internos se pongan en línea */
-    /* ... el resto del CSS que copiaste ... */
+    align-items: center; /* Centrar verticalmente, aunque los inputs ya tienen la misma altura */
+    margin-bottom: 30px; /* Separación después del grupo de teléfono (copiando el margin-bottom general) */
 }
-/* ... */
+
+/* Estilo para el input del prefijo (AÑADIDO Y AJUSTADO) */
+.prefix-input {
+    /* ANCHO CORREGIDO: 25% */
+    width: 25%;
+    height: 54px;
+    line-height: 54px;
+    margin-right: 5px; /* Pequeña separación del campo de número */
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    /* Estilos base */
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 1px solid black;
+    font-size: 19px;
+    font-family: Arial, sans-serif;
+    /* Estilos para que parezca NO EDITABLE */
+    background-color: #f0f0f0; 
+    color: #333; 
+    cursor: default; 
+    
+    margin-bottom: 0 !important; /* Sobreescribir el margen de 30px del input general */
+}
+
+/* Estilo para el input del número de teléfono (AJUSTADO) */
 .form-group input[type="tel"] {
-    width: 65%; /* Espacio restante para el número */
+    /* ANCHO CORREGIDO: 75% */
+    width: 75%; 
     padding-left: 10px;
-    margin-bottom: 0 !important; /* Quita el margen inferior general */
     /* Aseguramos que herede el estilo general de input */
     border: 1px solid black;
     background-color: white;
     border-radius: 5px;
     height: 54px;
     line-height: 54px;
+    
+    margin-bottom: 0 !important; /* Sobreescribir el margen de 30px del input general */
 }
 </style>
 </head>
