--- a/index.html
+++ b/index.html
@@ -401,36 +401,34 @@ inputPrefijo.value = prefijo;
             let maxLength = 15; // Valor seguro por defecto
             
             switch (paisValor) {
-                case 'Peru':
-                case 'Colombia':
-                case 'Chile':
-                case 'Ecuador':
-                    minLength = 9;
-                    maxLength = 9;
-                    break;
-                case 'Mexico':
-                case 'Guatemala':
-                case 'El-Salvador':
-                case 'Honduras':
-                case 'Costa-Rica':
-                    minLength = 8;
-                    maxLength = 8;
-                    break;
-                case 'Argentina':
-                case 'Venezuela':
-                case 'Bolivia':
-                    minLength = 10;
-                    maxLength = 10;
-                    break;
-                case 'Uruguay':
-                    minLength = 9;
-                    maxLength = 9;
-                    break;
-                default:
-                    // Default para "Otro País" u otros no especificados (longitud flexible)
-                    minLength = 7;
-                    maxLength = 15;
-                    break;
+case 'Peru':
+                case 'Colombia':
+                case 'Chile':
+                case 'Ecuador':
+                case 'Uruguay': 
+                case 'Paraguay': // ¡Añadido! Usa 9 dígitos
+                    minLength = 9;
+                    maxLength = 9;
+                    break;
+                
+                case 'Mexico': 
+                case 'Argentina':
+                case 'Venezuela':
+                case 'Bolivia': 
+                case 'Republica-Dominicana': // ¡Añadido! Usa 10 dígitos
+                    minLength = 10;
+                    maxLength = 10;
+                    break;
+
+                case 'Guatemala':
+                case 'El-Salvador':
+                case 'Honduras':
+                case 'Costa-Rica': 
+                case 'Panama': // ¡Añadido! Usa 8 dígitos
+                case 'Nicaragua': // ¡Añadido! Usa 8 dígitos
+                    minLength = 8;
+                    maxLength = 8;
+                    break;
             }
 
             // Aplica las restricciones de longitud al input de teléfono
