--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 <div class="form-group">
     <label for="telefono">3️⃣ Tu Teléfono<span class="required-asterisk">*</span></label>
     <div style="display: flex; align-items: center; gap: 5px;">
-        <span id="prefijo-telefono" style="font-size:19px; font-weight:bold;">+51</span>
+        <span id="prefijo-telefono" style="font-size:19px; font-weight:bold; color:black;"> </span>
         <input type="tel" id="telefono" name="telefono" placeholder="Tu número" required>
     </div>
 </div>
