--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 <div id="mensaje-exito">
     <img src="images/felicidades-nos-vemos-en-whatsapp.jpg" alt="Felicidades nos vemos en WhatsApp">
 
-    <a href="https://wa.me/+51965723248" class="whatsapp-button" target="_blank">
+    <a href="https://wa.link/gsj5x5" class="whatsapp-button" target="_blank">
         Ir al chat de WhatsApp
     </a>
 </div>
